# livrables/swagger.yaml
@@ -38,6 +38,30 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Task'
 
+        get:
+            tags: [ tasks ]
+            summary: Récupérer toutes les tâches
+            operationId: getTasks
+            parameters:
+                - in: query
+                  name: todo-only
+                  required: false
+                  description: Si true, retourne uniquement les tâches non faites
+                  schema:
+                      type: boolean
+                      example: true
+            responses:
+                '200':
+                    description: Tâches trouvées
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/Task'
+                '204':
+                    description: Aucune tâche trouvée
+
     /tasks/{id}:
         parameters:
             -   in: path
@@ -61,6 +85,30 @@ paths:
                                 $ref: '#/components/schemas/Task'
                 '404':
                     description: Tâche non trouvée
+        delete:
+            tags: [ tasks ]
+            summary: Supprimer une tâche
+            operationId: deleteTaskById
+            responses:
+                '204':
+                    description: Tâche supprimée avec succès
+                '404':
+                    description: Tâche non trouvée
+            put:
+                tags: [ tasks ]
+                summary: Modifier une tâche
+                operationId: updateTaskById
+                requestBody:
+                    required: true
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Task'
+                responses:
+                    '204':
+                        description: Tâche modifiée avec succès
+                    '404':
+                        description: Tâche non trouvée
 components:
     schemas:
         Task:
